methods.picture.PictureMono2.scala.code
def faireMotif(){
  
def faireV() {
  avance();avance();
  baisseBrosse();leveBrosse();
  gauche();avance();droite();avance();
  baisseBrosse();leveBrosse();
  droite();avance();gauche();avance();
  baisseBrosse();leveBrosse();
  avance();avance();gauche()
}

override def run() {
  for (i <- 0 to 3){
    faireV();

  }  
}




}

override def run() {
}